// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcLoading should not render the loading if the prop is on false value 1`] = `
<div
  class="ec-loading__container"
>
  <!---->
   
</div>
`;

exports[`EcLoading should render as expected 1`] = `
<div
  class="ec-loading__container"
>
  <div
    class="ec-loading"
  >
    <svg
      class="ec-loading__svg"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="ec-loading__circle"
        cx="50"
        cy="50"
        r="45"
      />
    </svg>
  </div>
   
</div>
`;

exports[`EcLoading should render the slot when is passing 1`] = `
<div
  class="ec-loading__container"
>
  <div
    class="ec-loading"
  >
    <svg
      class="ec-loading__svg"
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="ec-loading__circle"
        cx="50"
        cy="50"
        r="45"
      />
    </svg>
  </div>
   
  <p>
    Random text
  </p>
</div>
`;
